@@ -1,7 +1,9 @@
 package ru.otus.lO15;
 
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.util.Arrays;
+import java.util.List;
 
 
 public class RunnerTest {
@@ -11,32 +13,26 @@ public class RunnerTest {
         int success = 0;
         int error = 0;
         for (Method test : methods.testMethods) {
-            System.out.println("--------------------------");
-            System.out.println(test.getName());
-            System.out.println("--------------------------");
-            Object testsClass = null;
+            printTestName(test.getName());
+            Object testsClassInstance = null;
             try {
-                testsClass = c.newInstance();
-                for (Method before : methods.beforeTestMethods) {
-                    try {
-                        before.invoke(testsClass);
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                        return;
-                    }
+                testsClassInstance = c.getDeclaredConstructor().newInstance();
+                try {
+                    invokeMethodsWithExceptionHandling(methods.beforeTestMethods, testsClassInstance);
+                } catch (Exception e) {
+                    e.printStackTrace();
+                    break;
                 }
-                test.invoke(testsClass);
+                test.invoke(testsClassInstance);
                 success++;
             } catch (Exception e) {
                 error++;
                 e.printStackTrace();
             } finally {
-                for (Method method : methods.afterTestMethods) {
-                    try {
-                        method.invoke(testsClass);
-                    } catch (Exception e) {
-                        e.printStackTrace();
-                    }
+                try {
+                    invokeMethodsWithExceptionHandling(methods.afterTestMethods, testsClassInstance);
+                } catch (Exception e) {
+                    e.printStackTrace();
                 }
             }
         }
@@ -48,6 +44,18 @@ public class RunnerTest {
         System.out.println("--------------------------");
         System.out.println("CountTest= " + count + " ;Success= " + success + " ;Error= " + error);
         System.out.println("--------------------------");
+    }
+
+    private static void printTestName(String testName) {
+        System.out.println("--------------------------");
+        System.out.println(testName);
+        System.out.println("--------------------------");
+    }
+
+    private static void invokeMethodsWithExceptionHandling(List<Method> methodList, Object testsClassInstance) throws InvocationTargetException, IllegalAccessException {
+        for (Method method : methodList) {
+            method.invoke(testsClassInstance);
+        }
     }
 
 }
